grammar.js
    source_file: $ => repeat($._top_level_statement),

    _top_level_statement: $ => choice(
      $._statement,
      $.hotstring,
      $.remap,
      $.hotkey,
    ),

    _single_expression: $ => choice(
      $._pairwise_operation,
      $._literal,
      $.identifier,
      $.dynamic_identifier,
      $._primary_expression,
      $.verbal_not_operation,
      $.dereference_operation,
      $.varref_operation,
      // The maybe operator (?) is a postfix marker on an operand. It is permitted
      // in expression position generally so that optional chains (x?.y) and
      // alpha.29 short-circuiting (f()? as an operand of any operator) compose
      // naturally. Where it is actually legal is contextual; we are permissive.
      $.optional_expression,
    ),

    variable_declaration: $ => prec.right(seq(
      field('scope', $.scope_identifier),
      optional(seq(
        $.variable_declarator,
        repeat(seq(',', $.variable_declarator)),
      )),
    )),

    // Not restricted to `:=`: `global w += 1` is legal and means "declare w global, then
    // apply +=" (verified against 2.0.26), so any assignment operator may follow the name.
    relational_operation: $ => prec.left(PREC.RELATIONAL, seq(
      field('left', $._single_expression),
      field('operator', choice('<', '>', '<=', '>=')),
      field('right', $._single_expression),
    )),

    equality_operation: $ => prec.left(PREC.EQUALITY, seq(
      field('left', $._single_expression),
      field('operator', choice('=', '==')),
      field('right', $._single_expression),
    )),

    assignment_operator: $ =>
      choice( ':=', '+=', '-=', '*=', '/=', '//=', '.=', '|=', '&=', '^=', '>>=', '<<=', '>>>=', '??='),

    function_call: $ => prec(PREC.OVERRIDE, seq(
      field('function', $._single_expression),
      token.immediate('('),
      field('arguments', optional($.arg_sequence)),
      ')',
    )),

    // MsgBox "Hello", "Example", "IconI OK"
    // Can only be used as a statement (not in expressions)
    call_statement: $ => prec.right(PREC.OVERRIDE, seq(
      // Only simple identifiers and object members for command-style.
      // `true`/`false` are built-in variables (lexed as boolean_literal), so a bare
      // `false` on a line is a command-style call of that variable - the interpreter
      // parses it as `false()` (a runtime error, but syntactically valid). Bare numeric
      // and string literals, by contrast, are load-time errors ("does not contain a
      // recognized action") and are correctly rejected.
      field('function', choice(
        $.identifier,
        $.member_access,
        $.boolean_literal,
      )),
      field('arguments', optional($.arg_sequence)),
      $._eol,
    )),

    _arg: $ => choice(
      $._single_expression,
      $.empty_arg,
    ),

    arg_sequence: $ => prec.right(choice(
      // Args without expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        /**
         * A trailing comma is allowed but ignored - you can test this
         *    Function(params*) => MsgBox(params.length)
         *    Function(1,) ; "1"
         */
        optional(','),
      ),
      // Only the *last* argument may be expanded, hence the separate alternatives rather
      // than admitting array_expansion_operation as an ordinary `_arg`. They share the
      // `_arg (',' _arg)*` prefix with the branch above so that LALR can defer the decision
      // to the marker itself.
      // Single arg with expansion
      $.array_expansion_operation,
      // Multiple args with last one having expansion
      seq(
        $._arg,
        repeat(seq(',', $._arg)),
        ',',
        $.array_expansion_operation,
      ),
    )),

    // Postfix `*`, which expands an iterable into the enclosing argument list or array
    // literal. array_expansion_marker is produced by the external scanner, which
    // disambiguates it from the multiplication operator by looking ahead for ')' or ']'.
    function_declaration: $ => seq(
      $._function_def_marker,
      optional(field('scope', $.scope_identifier)),
      field('name', $.identifier),
      field('head', $.function_head),
      field('body', $.function_body),
    ),

    function_body: $ => choice(
      $.block,
      seq('=>', $._single_expression),
    ),

    function_head: $ => seq(
      '(',
      optional(choice($.wildcard, $.param_sequence)),
      ')',
    ),

    // "formal parameter list"
    _initializer: $ => seq(
      field('operator', alias(':=', $.assignment_operator)),
      field('value', $._single_expression)),

    integer_literal: $ => token(/([0-9]+)/),

    boolean_literal: $ => token(
      prec(PREC.KEYWORD, choice(/true/i, /false/i)),
    ),

    string_literal: $ => choice(
      token(/"([^"`\r\n]|`[^\r\n\t])*"/),
      token(/'([^'`\r\n]|`[^\r\n\t])*'/),
    ),

    // The elements are an arg_sequence rather than an expression_sequence: an array literal
    // takes exactly what an argument list takes, including elided elements (`[1,,3]`) and a
    // trailing array expansion (`[a, rest*]`), neither of which is an expression.
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // AHK allows property and method names, but not variable names, to begin with a digit
    // https://www.autohotkey.com/docs/alpha/Concepts.htm#names
    _numeric_property_name: $ => token(/[0-9][a-zA-Z0-9_]*/),

    // Note: not strictly "modifiers" because declaring one can switch a function into assume-local/global mode
    _block_body: $ => seq($._statement, optional($._block_body)),

    block: $ => seq(
      '{', optional($._block_body), '}',
    ),

    return_statement: $ => prec.right(PREC.DEFAULT,
      seq(
        $.return,
        optional(seq($._value_start, field('value', $._single_expression))),
      ),
    ),

    return: $ => kwtok(/return/i),
    as: $ => kwtok(/as/i),
    export: $ => kwtok(/Export/i),
    global: $ => kwtok(/global/i),
    default: $ => kwtok(/default/i),
    class_declaration: $ => seq(
      $._class_decl_marker,
      $.class,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.class_body),
    ),

    class_body: $ => seq('{', _class_body_members($), '}'),

    property_declaration: $ => seq(
      optional(field('scope', $.scope_identifier)),
      choice(
        // Accessor forms, which declare exactly one property.
        seq(
          field('name', $._property_name),
          // Unlike function_head, the brackets may not be empty ("Empty [] not permitted"),
          // but they may hold a lone anonymous variadic marker (`__Item[*]`).
          field('head', optional(seq('[', choice($.wildcard, $.param_sequence), ']'))),
          field('body', choice(
            // getter-only shorthand: prop => 42
            seq('=>', alias($._single_expression, $.getter)),
            $.property_declaration_block,
          )),
        ),
        // Initializer-list form. One declarator per name, so that `static a := 1, b := 2`
        // yields a name/value pair per property rather than repeating both fields on the
        // declaration itself.
        seq(
          alias($._first_property_declarator, $.property_declarator),
          repeat(seq(',', $.property_declarator)),
        ),
      ),
    ),

    // Only the *first* declarator is required to be initialized, and only it can have a
    // scope keyword
    _first_property_declarator: $ => seq(
      field('name', choice($._property_name, alias($.scope_identifier, $.identifier))),
      field('initializer', $._initializer),
    ),

    property_declarator: $ => seq(
      field('name', $._property_name),
      field('initializer', optional($._initializer)),
    ),

    _property_name: $ => choice(
      $.identifier,
      alias($._numeric_property_name, $.identifier), // property names may begin with a digit
      alias($._qualified_property_name, $.member_access),
    ),

    // A dotted chain of literal identifiers (`x.y`, `Prototype.sharedValue`,
    // `a.b.c`) used as a property-declaration target or a `catch` class name. Must be
    // literal identifiers, so far narrower scope than a typical member_acess
    class: $ => kwtok(/class/i),
    struct: $ => kwtok(/struct/i),

    struct_declaration: $ => seq(
      $._class_decl_marker,
      $.struct,
      field('name', $.identifier),
      optional(seq(
        $.extends,
        field('superclass', choice($.identifier, $.member_access)),
      )),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq('{', _class_body_members($), '}'),

    typed_property_declaration: $ => prec.right(seq(
      field('name', choice(
        $.identifier,
        alias($._numeric_property_name, $.identifier),
      )),
      ':',
      field('type', $.type_specifier),
      optional($._initializer),
    )),

    // Docs say that type specifiers have very specific rules but I think they're outdated, integer literals don't
    // work in alpha.30. General idea is that it must be an expression evaluating to a Class that fulfils certain
    // properties (basically, is a struct), with caveats. No top-level dereference operations, for example.
    // https://www.autohotkey.com/docs/alpha/Structs.htm#type-specs
    type_specifier: $ => prec(10, choice(
      $.identifier,
      $.integer_literal,
      // An exact class name (`Example.Ptr`), an array type (`Int8[]`), or a function call
      // optionally followed by property/method calls.
      $.member_access,
      $.index_access,
      $.function_call,
      seq('(', $.expression_sequence, ')'),
    )),

    // #endregion Structs

    // #region Exports

    // https://www.autohotkey.com/docs/alpha/lib/Export.htm
    // `export [default] <function|class|struct definition>` or `export global <var list>`.
    // Only global names can be exported; a method cannot be exported (only its class/struct),
    // which falls out naturally because export is a statement-level construct and
    // method_declaration only appears inside class/struct bodies.
    // Backward-compat caveats from the docs (export remains usable as an ordinary name):
    //   - `export MyVar`     is a call statement, not an export (global keyword required)
    //   - `export fn() => 1` is a call to a user "export" function (fat-arrow excluded)
    export_declaration: $ => seq(
      $._export_def_marker,
      $.export,
      choice(
        seq(
          optional($.default),
          field('declaration', choice(
            $.function_declaration,
            $.class_declaration,
            $.struct_declaration,
          )),
        ),
        seq(
          // Note this isn't actually a scope identifier, just required for the interpreter
          // to distinguish between `export` as an export and `export` as a function name
          $.global,
          // The same declarator node an ordinary declaration list uses. `export_declaration`
          // is itself the declaration here, so the declarators hang off it directly rather
          // than off a nested variable_declaration - which would need a `scope` field holding
          // the `global` keyword node rather than a `scope_identifier`.
          $.variable_declarator,
          repeat(seq(',', $.variable_declarator)),
        ),
      ),
    ),

    // #endregion Exports

    //# region Directives

    // Directives - note that these tend to have very specific requirements for their parameters
    // when they exist. Read the docs carefully

    // #Include, #HotIf, etc
    clipboard_timeout_directive: $ => seq(
      directive_name($, /#ClipboardTimeout/i),
      field('timeout', $.integer_literal),
    ),

    dll_load_directive: $ => seq(
      directive_name($, /#DllLoad/i),
      optional(field('file', $.file_or_dir_name)),
      $._eol,
    ),

    // https://www.autohotkey.com/docs/v2/lib/FileEncoding.htm
    error_stdout_directive: $ => seq(
      directive_name($, /#ErrorStdOut/i),
      optional(field('encoding', alias(kwtok(/['"]?(utf-8(-raw)?|utf-16(-raw)?|cp\d+|\d+)['"]?/i), $.encoding_identifier))),
      $._eol,
    ),

    requires_directive: $ => prec.right(seq(
      directive_name($, /#Requires/i),
      field('requirement', $.requirement),
      repeat(field('version', $.version_requirement)),
      optional(field('bitness', $.bitness)),
      $._eol,
    )),

    // This must be "AutoHotkey", but if we later support e.g. KeySharp, it'd be allowed here
    hotif_directive: $ => prec.right(seq(
      directive_name($, /#Hotif/i),
      optional(field('expression', $._single_expression)),
      $._eol,
    )),

    hotif_timeout_directive: $ => seq(
      directive_name($, /#HotifTimeout/i),
      field('timeout', $.integer_literal),
      $._eol,
    ),

    hotstring_directive: $ => seq(
      directive_name($, /#Hotstring/i),
      choice(
        alias(kwtok(/NoMouse/i), $.hotstring_no_mouse),
        seq(
          kwtok(/EndChars/i),
          field('end_chars', alias(token(/[^\s]{1,100}/), $.hotstring_end_chars)),
        ),
        field('options', alias(repeat1(choice($._hotstring_modifier, $.hotstring_execute)), $.hotstring_option_sequence)),
      ),
      $._eol,
    ),

    // https://www.autohotkey.com/docs/alpha/lib/_Import.htm
    import_directive: $ => prec.right(seq(
      directive_name($, /#Import/i),
      optional($.export),
      field('module', choice(
        $.identifier,
        $.string_literal,
      )),
      optional(seq(
        $.as,
        field('alias', $.identifier),
      )),
      field('name', optional(seq(
        '{',
        // Note strictly speaking, wildcard is only legal once in an import list
        repeat1(seq(choice($.export_name, $.wildcard), optional(','))),
        '}',
      ))),
      $._eol,
    )),

    export_name: $ => seq(
      field('export', $.identifier),
      optional(seq(
        $.as,
        field('alias', $.identifier),
      )),
    ),

    include_directive: $ => prec.left(seq(
      directive_name($, /#Include/i),
      optional(field('ignore_failure', $.include_ignore_failure)),
      field('path', choice(
        $.file_or_dir_name,
        $.lib_name,
      )),
      $._eol,
    )),

    include_again_directive: $ => prec.left(seq(
      directive_name($, /#IncludeAgain/i),
      optional(field('ignore_failure', $.include_ignore_failure)),
      field('path', choice(
        $.file_or_dir_name,
        $.lib_name,
      )),
      $._eol,
    )),

    use_hook_directive: $ => seq(
      directive_name($, /#UseHook/i),
      field('value', choice(
        $.boolean_literal,
        alias(choice(token('0'), token('1')), $.integer_literal),
      )),
      $._eol,
    ),

    max_threads_directive: $ => seq(
      directive_name($, /#MaxThreads/i),
      field('value', $.integer_literal),
      $._eol,
    ),

    max_threads_per_hotkey_directive: $ => seq(
      directive_name($, /#MaxThreadsPerHotkey/i),
      field('value', $.integer_literal),
      $._eol,
    ),

    max_threads_buffer_directive: $ => seq(
      directive_name($, /#MaxThreadsBuffer/i),
      optional(field('value', choice(
        $.boolean_literal,
        alias(choice(token('0'), token('1')), $.integer_literal),
      ))),
      $._eol,
    ),

    no_tray_icon_directive: $ => seq(
      directive_name($, /#NoTrayIcon/i),
      $._eol,
    ),

    single_instance_directive: $ => seq(
      directive_name($, /#SingleInstance/i),
      optional(field('mode', alias(kwtok(/Force|Ignore|Prompt|Off/i), $.single_instance_mode))),
      $._eol,
    ),

    warn_directive: $ => seq(
      directive_name($, /#Warn/i),
      optional(seq(
        field('type', $.warning_type),
        optional(seq(',', field('mode', $.warning_mode))),
      )),
      $._eol,
    ),

    warning_type: $ => kwtok(/VarUnset|LocalSameAsGlobal|Unreachable|All/i),
    warning_mode: $ => kwtok(/MsgBox|StdOut|OutputDebug|Off/i),
