test/corpus/directives.txt
================================================================================
Warn with type and no mode
================================================================================

#Warn All

--------------------------------------------------------------------------------

(source_file
  (warn_directive
    (warning_type)))

================================================================================
Warn with type and mode
================================================================================

#Warn varunset, off

--------------------------------------------------------------------------------

(source_file
  (warn_directive
    (warning_type)
    (warning_mode)))

================================================================================
ErrorStdOut with no option
================================================================================

#ErrorStdOUt

--------------------------------------------------------------------------------

(source_file
  (error_stdout_directive))

================================================================================
ErrorStdOut with quoted option
================================================================================

#ErrorStdOut "UTF-8-RAW"

--------------------------------------------------------------------------------

(source_file
  (error_stdout_directive
    (encoding_identifier)))

================================================================================
ErrorStdOut with unquoted option
================================================================================

#ErrorStdOut CP0

--------------------------------------------------------------------------------

(source_file
  (error_stdout_directive
    (encoding_identifier)))

================================================================================
ClipboardTimeout
================================================================================

#ClipboardTimeout 2000

--------------------------------------------------------------------------------

(source_file
  (clipboard_timeout_directive
    (integer_literal)))

================================================================================
DllLoad with no argument
================================================================================

#DllLoad

--------------------------------------------------------------------------------

(source_file
  (dll_load_directive))

================================================================================
DllLoad with dll
================================================================================

#DllLoad NetDriverInstall.dll

--------------------------------------------------------------------------------

(source_file
  (dll_load_directive
    (file_or_dir_name)))

================================================================================
DllLoad with variable
================================================================================

#DllLoad "%A_ScriptDir%/bin/library.dll"

--------------------------------------------------------------------------------

(source_file
  (dll_load_directive
    (file_or_dir_name)))

================================================================================
Standard Requires
================================================================================

#Requires AutoHotkey v2.0.0

--------------------------------------------------------------------------------

(source_file
  (requires_directive
    (version_requirement)))

================================================================================
Standard Requires with bitness
================================================================================

#Requires AutoHotkey v2.0.0 64-bit

--------------------------------------------------------------------------------

(source_file
  (requires_directive
    (version_requirement)
    (bitness)))

================================================================================
Requires with trailing +
================================================================================

#Requires AutoHotkey v2.0.10+

--------------------------------------------------------------------------------

(source_file
  (requires_directive
    (version_requirement)))

================================================================================
Requires with relational operator
================================================================================

#Requires AutoHotkey >=2.0.18

--------------------------------------------------------------------------------

(source_file
  (requires_directive
    (version_requirement)))

================================================================================
Requires with multiple version requirements
================================================================================

#Requires AutoHotkey >=2-rc <2

--------------------------------------------------------------------------------

(source_file
  (requires_directive
    (version_requirement)
    (version_requirement)))

================================================================================
HotIf with function call
================================================================================

#HotIf GetKeyState("Alt")

--------------------------------------------------------------------------------

(source_file
  (hotif_directive
    (function_call
      (identifier)
      (arg_sequence
        (string_literal)))))

================================================================================
HotIf with function call and trailing statement
================================================================================

#HotIf GetKeyState("CapsLock", "T")

M::MsgBox("Hello!")

--------------------------------------------------------------------------------

(source_file
  (hotif_directive
    (function_call
      (identifier)
      (arg_sequence
        (string_literal)
        (string_literal))))
  (hotkey
    (hotkey_trigger
      (key_identifier))
    (function_call
      (identifier)
      (arg_sequence
        (string_literal)))))

================================================================================
HotIf with simple check
================================================================================

#HotIf var == true

--------------------------------------------------------------------------------

(source_file
  (hotif_directive
    (equality_operation
      (identifier)
      (boolean_literal))))

================================================================================
HotIf with expression followed by ctrl hotkey
================================================================================

#HotIf var > 0

^M::MsgBox()

--------------------------------------------------------------------------------

(source_file
  (hotif_directive
    expression: (relational_operation
      left: (identifier)
      right: (integer_literal)))
  (hotkey
    trigger: (hotkey_trigger
      (hotkey_ctrl)
      (key_identifier))
    body: (function_call
      function: (identifier))))

================================================================================
HotIf with no expression (reset)
================================================================================

#HotIf

--------------------------------------------------------------------------------

(source_file
  (hotif_directive))

================================================================================
HotIfTimeout directive
================================================================================

#HotIfTimeout 1000

--------------------------------------------------------------------------------

(source_file
  (hotif_timeout_directive
    (integer_literal)))

================================================================================
Hotstring NoMouse
================================================================================

#Hotstring NoMouse

--------------------------------------------------------------------------------

(source_file
  (hotstring_directive
    (hotstring_no_mouse)))

================================================================================
Hotstring EndChars
================================================================================

#Hotstring EndChars `r`n`t`s{}()[]

--------------------------------------------------------------------------------

(source_file
  (hotstring_directive
    (hotstring_end_chars)))

================================================================================
Hotstring with option sequence
================================================================================

#Hotstring c r x

--------------------------------------------------------------------------------

(source_file
  (hotstring_directive
    (hotstring_option_sequence
      (hotstring_case_sensitive)
      (hotstring_raw)
      (hotstring_execute))))

================================================================================
Include with filepath
================================================================================

#Include .\lib\util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (file_or_dir_name)))

================================================================================
Include with quoted filepath
================================================================================

#Include '.\lib\util\json.ahk'

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (file_or_dir_name)))

================================================================================
Include with ignore marker and filepath
================================================================================

#Include *i .\lib\util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (include_ignore_failure)
    (file_or_dir_name)))

================================================================================
Include with library name
================================================================================

#Include <JSON>

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (lib_name)))

================================================================================
Include with quoted library name
================================================================================

#Include "<JSON>"

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (lib_name)))

================================================================================
Include with ignore marker and library name
================================================================================

#Include *i <JSON>

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (include_ignore_failure)
    (lib_name)))

================================================================================
Include with filepath with space
================================================================================

#Include .\lib\my util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (file_or_dir_name)))

================================================================================
Include with lib name with space
================================================================================

#Include <utility scripts/JSON>

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (lib_name)))

================================================================================
Include with filepath with ignore marker and space
================================================================================

#Include *i .\lib\my util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (include_ignore_failure)
    (file_or_dir_name)))

================================================================================
Include with lib name with ignore marker and space
================================================================================

#Include *i <utility scripts/JSON>

--------------------------------------------------------------------------------

(source_file
  (include_directive
    (include_ignore_failure)
    (lib_name)))

================================================================================
IncludeAgain with filepath
================================================================================

#IncludeAgain .\lib\util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (file_or_dir_name)))

================================================================================
IncludeAgain with quoted filepath
================================================================================

#IncludeAgain '.\lib\util\json.ahk'

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (file_or_dir_name)))

================================================================================
IncludeAgain with ignore marker and filepath
================================================================================

#IncludeAgain *i .\lib\util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (include_ignore_failure)
    (file_or_dir_name)))

================================================================================
IncludeAgain with library name
================================================================================

#IncludeAgain <JSON>

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (lib_name)))

================================================================================
IncludeAgain with quoted library name
================================================================================

#IncludeAgain "<JSON>"

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (lib_name)))

================================================================================
IncludeAgain with ignore marker and library name
================================================================================

#IncludeAgain *i <JSON>

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (include_ignore_failure)
    (lib_name)))

================================================================================
IncludeAgain with filepath with space
================================================================================

#IncludeAgain .\lib\my util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (file_or_dir_name)))

================================================================================
IncludeAgain with lib name with space
================================================================================

#IncludeAgain <utility scripts/JSON>

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (lib_name)))

================================================================================
IncludeAgain with filepath with ignore marker and space
================================================================================

#IncludeAgain *i .\lib\my util\json.ahk

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (include_ignore_failure)
    (file_or_dir_name)))

================================================================================
IncludeAgain with lib name with ignore marker and space
================================================================================

#IncludeAgain *i <utility scripts/JSON>

--------------------------------------------------------------------------------

(source_file
  (include_again_directive
    (include_ignore_failure)
    (lib_name)))

================================================================================
UseHook with boolean literal
================================================================================

#UseHook false

--------------------------------------------------------------------------------

(source_file
  (use_hook_directive
    (boolean_literal)))

================================================================================
UseHook with integer literal
================================================================================

#UseHook 0

--------------------------------------------------------------------------------

(source_file
  (use_hook_directive
    (integer_literal)))

================================================================================
UseHook with invalid integer
:error
================================================================================

#UseHook 42

--------------------------------------------------------------------------------



================================================================================
MaxThreads
================================================================================

#MaxThreads 127

--------------------------------------------------------------------------------

(source_file
  (max_threads_directive
    (integer_literal)))

================================================================================
SingleInstance Bare
================================================================================

#SingleInstance

--------------------------------------------------------------------------------

(source_file
  (single_instance_directive))

===============================================================================
SingleInstance Force
===============================================================================

#SingleInstance Force

--------------------------------------------------------------------------------

(source_file
  (single_instance_directive
    (single_instance_mode)))

===============================================================================
SingleInstance Ignore
===============================================================================

#SingleInstance Force

--------------------------------------------------------------------------------

(source_file
  (single_instance_directive
    (single_instance_mode)))

===============================================================================
SingleInstance Prompt
===============================================================================

#SingleInstance Prompt

-------------------------------------------------------------------------------

(source_file
  (single_instance_directive
    (single_instance_mode)))

===============================================================================
SingleInstance Off
===============================================================================

#SingleInstance Off

-------------------------------------------------------------------------------

(source_file
  (single_instance_directive
    (single_instance_mode)))

===============================================================================
NoTrayIcon
===============================================================================

#NoTrayIcon

-------------------------------------------------------------------------------

(source_file
  (no_tray_icon_directive))

===============================================================================
MaxThreadsPerHotkey
===============================================================================

#MaxThreadsPerHotkey 3

-------------------------------------------------------------------------------

(source_file
  (max_threads_per_hotkey_directive
    (integer_literal)))

===============================================================================
MaxThreadsBuffer Bare
===============================================================================

#MaxThreadsBuffer

-------------------------------------------------------------------------------

(source_file
  (max_threads_buffer_directive))

===============================================================================
MaxThreadsBuffer boolean literal
===============================================================================

#MaxThreadsBuffer true

-------------------------------------------------------------------------------

(source_file
  (max_threads_buffer_directive
    (boolean_literal)))

===============================================================================
MaxThreadsBuffer integer literal
===============================================================================

#MaxThreadsBuffer 0

-------------------------------------------------------------------------------

(source_file
  (max_threads_buffer_directive
    (integer_literal)))

===============================================================================
Bare Import
===============================================================================

#Import Module

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (identifier)))

===============================================================================
Bare Import with String
===============================================================================

#Import "path/to/module.ahk"

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (string_literal)))

===============================================================================
String import with Re-Export
===============================================================================

#Import export "path/to/module.ahk"

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (export)
    module: (string_literal)))

===============================================================================
Bare Import with Re-Export
===============================================================================

#Import export Module

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (export)
    module: (identifier)))

===============================================================================
Simple Import with Alias
===============================================================================

#Import Module as MyModule

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (as)
    alias: (identifier)))

===============================================================================
Aliased String Import
===============================================================================

#Import "path/to/module.ahk" as Foo

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (string_literal)
    (as)
    alias: (identifier)))

===============================================================================
Import with Imported Name
===============================================================================

#Import Module { Foo }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (export_name
      export: (identifier))))

===============================================================================
Re-Export with Imported Name
===============================================================================

#Import export Module { Foo }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (export)
    module: (identifier)
    (export_name
      export: (identifier))))

===============================================================================
Import with Multiple Imported Names
===============================================================================

#Import Module { Foo, Bar, Baz }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (export_name
      export: (identifier))
    (export_name
      export: (identifier))
    (export_name
      export: (identifier))))

===============================================================================
Import with Aliased Imported Name
===============================================================================

#Import Module { Foo as Bar }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))))

===============================================================================
Import with Multiple Aliased Imported Names
===============================================================================

#Import Module { Foo as MyFoo, Bar as MyBar, Baz as MyBaz }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))))

===============================================================================
Import with Multiple Imported Names Multiline
===============================================================================

#Import "path/to/module" { 
  Foo, 
  Bar, 
  Baz 
}

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (string_literal)
    (export_name
      (identifier))
    (export_name
      (identifier))
    (export_name
      (identifier))))

===============================================================================
Import with Multiple Aliased Imported Names
===============================================================================

#Import Module { 
  Foo as MyFoo,
  Bar as MyBar,
  Baz as MyBaz
}

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))))

===============================================================================
Import with Module Alias and Imported Names
===============================================================================

#Import Module as MyModule { Foo as Bar }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    module: (identifier)
    (as)
    alias: (identifier)
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))))

===============================================================================
Re-Export with Module Alias and Imported Names
===============================================================================

#Import export Module as MyModule { Foo as Bar }

-------------------------------------------------------------------------------

(source_file
  (import_directive
    (export)
    module: (identifier)
    (as)
    alias: (identifier)
    (export_name
      export: (identifier)
      (as)
      alias: (identifier))))

===============================================================================
Multiple Successive Imports
===============================================================================

#Import Module1 { Foo }
#Import Module2 { Bar, Baz }

-------------------------------------------------------------------------------
(source_file
  (import_directive
    (identifier)
    (export_name
      (identifier)))
  (import_directive
    (identifier)
    (export_name
      (identifier))
    (export_name
      (identifier))))
