test/corpus/exports.txt
===============================================================================
Export function declaration
===============================================================================

export MyFunction() {
  return 42
}

-------------------------------------------------------------------------------

(source_file
  (export_declaration
    (export)
    (function_declaration
      (identifier)
      (function_head)
      (function_body
        (block
          (return_statement
            (return)
            (integer_literal)))))))

===============================================================================
Export default function declaration
===============================================================================

export default MyFunction() {
  return 42
}

-------------------------------------------------------------------------------

(source_file
  (export_declaration
    (export)
    (default)
    (function_declaration
      (identifier)
      (function_head)
      (function_body
        (block
          (return_statement
            (return)
            (integer_literal)))))))

===============================================================================
Export default class declaration
===============================================================================

export default class MyModule {
  x := 1
}

-------------------------------------------------------------------------------

(source_file
  (export_declaration
    (export)
    (default)
    (class_declaration
      (class)
      (identifier)
      (class_body
        (property_declaration
          (property_declarator
            (identifier)
            (assignment_operator)
            (integer_literal)))))))

===============================================================================
Export class declaration
===============================================================================

export class Widget {
  Name := ""
}

-------------------------------------------------------------------------------

(source_file
  (export_declaration
    (export)
    (class_declaration
      (class)
      (identifier)
      (class_body
        (property_declaration
          (property_declarator
            (identifier)
            (assignment_operator)
            (string_literal)))))))

===============================================================================
Export struct declaration
===============================================================================

export struct Point {
  x: Int
  y: Int
}

-------------------------------------------------------------------------------

(source_file
  (export_declaration
    (export)
    (struct_declaration
      (struct)
      (identifier)
      (struct_body
        (typed_property_declaration
          (identifier)
          (type_specifier
            (identifier)))
        (typed_property_declaration
          (identifier)
          (type_specifier
            (identifier)))))))
